--- a/src/app/components/session-controls/session-controls.component.scss
+++ b/src/app/components/session-controls/session-controls.component.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 .session-controls {
   display: flex;
   flex-direction: column;
@@ -91,7 +93,7 @@
   border: 2px solid transparent;
   
   &:hover {
-    background-color: darken(theme('colors.neutral.light'), 5%);
+    background-color: color.adjust(theme('colors.neutral.light'), $lightness: -5%);
   }
   
   &.active {
