--- a/src/app/components/sound-selector/sound-selector.component.scss
+++ b/src/app/components/sound-selector/sound-selector.component.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 .sound-selector {
   width: 100%;
   max-width: 600px;
@@ -38,7 +40,7 @@
   transition: all 0.2s ease;
   
   &:hover {
-    background-color: darken(theme('colors.neutral.light'), 5%);
+    background-color: color.adjust(theme('colors.neutral.light'), $lightness: -5%);
   }
   
   &.active {
